--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,10 +86,12 @@ endif()
 
 idf_component_register(SRCS ${SOURCES}
                        INCLUDE_DIRS ${LVGL_INCLUDE_DIRS}
-                       REQUIRES lvgl)
+                       REQUIRES lvgl driver esp_common esp_timer log freertos esp_rom soc)
 
 target_compile_definitions(${COMPONENT_LIB} PUBLIC "-DLV_LVGL_H_INCLUDE_SIMPLE")
 
 else()
     message(FATAL_ERROR "LVGL ESP32 drivers: ESP_PLATFORM is not defined. Try reinstalling ESP-IDF.")
 endif()
+
+component_compile_options(-Wno-error=format= -Wno-format)
